<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>io.github.stephen-allen.cytosm</groupId>
	<artifactId>parent</artifactId>
	<version>1.3-SNAPSHOT</version>
	<packaging>pom</packaging>

  <name>Cytosm</name>
  <description>Cytosm Graph Tools</description>
	<url>https://github.com/Stephen-Allen/cytosm/tree/main</url>
	<scm>
		<connection>scm:git:https://github.com/Stephen-Allen/cytosm.git</connection>
		<url>https://github.com/Stephen-Allen/cytosm/tree/main</url>
	</scm>

	<licenses>
		<license>
			<name>Apache 2</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
			<comments>A business-friendly OSS license</comments>
		</license>
	</licenses>

	<inceptionYear>2016</inceptionYear>

	<developers>
		<developer>
			<name>James Brook</name>
			<email>jmbrook@gmail.com</email>
			<timezone>0</timezone>
		</developer>
		<developer>
			<id>MarcoLotz</id>
			<name>Marco Aurelio B. F. Gomes Lotz</name>
			<email>contact@marcolotz.com</email>
			<timezone>0</timezone>
		</developer>
		<developer>
			<id>suksant</id>
			<name>Suksant Sae Lor</name>
			<email>suksant@gmail.com</email>
			<timezone>0</timezone>
		</developer>
		<developer>
			<id>alzindiq</id>
			<name>Luis Miguel Vaquero Gonzalez</name>
			<email>alzindiq@gmail.com</email>
			<timezone>0</timezone>
		</developer>
		<developer>
			<id>Nemikolh</id>
			<name>Joan Varvenne</name>
			<email>joan.varvenne@gmail.com</email>
			<timezone>0</timezone>
		</developer>
		<developer>
			<id>????</id>
			<name>Alhamza Alnaimi</name>
			<email>????</email>
			<timezone>0</timezone>
		</developer>
		<developer>
			<id>????</id>
			<name>Benjamin Alexander Steer</name>
			<email>????</email>
			<timezone>0</timezone>
		</developer>
		<developer>
			<id>sallen</id>
			<name>Stephen Allen</name>
			<email>sallen@semantic-ai.com</email>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<checkstyle.config.location>${project.basedir}/config/cytosm_checkstyle.xml</checkstyle.config.location>
		<antlr.version>4.13.1</antlr.version>
		<commons-lang3.version>3.14.0</commons-lang3.version>
		<jackson-bom.version>2.17.1</jackson-bom.version>
		<junit.version>4.13.2</junit.version>
		<slf4j.version>2.0.13</slf4j.version>
	</properties>

	<modules>
		<module>common</module>
		<module>cypher2sql</module>
		<module>pathfinder</module>
	</modules>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.3.0</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.5.0</version>
				<dependencies>
					<dependency>
						<groupId>org.kordamp.maven</groupId>
						<artifactId>pomchecker-enforcer-rules</artifactId>
						<version>1.11.0</version>
					</dependency>
				</dependencies>
				<configuration>
					<rules>
						<requireReleaseDeps>
							<failWhenParentIsSnapshot>false</failWhenParentIsSnapshot>
						</requireReleaseDeps>
					</rules>
				</configuration>
<!--				<executions>-->
<!--					<execution>-->
<!--						<id>enforce</id>-->
<!--						<goals>-->
<!--							<goal>enforce</goal>-->
<!--						</goals>-->
<!--						<configuration>-->
<!--							<rules>-->
<!--								<CheckMavenCentral implementation="org.kordamp.maven.enforcer.checker.CheckMavenCentral"/>-->
<!--							</rules>-->
<!--						</configuration>-->
<!--					</execution>-->
<!--				</executions>-->
			</plugin>

			<plugin>
				<groupId>org.kordamp.maven</groupId>
				<artifactId>pomchecker-maven-plugin</artifactId>
				<version>1.11.0</version>
				<executions>
					<execution>
						<id>check-release</id>
						<goals>
							<goal>check-maven-central</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>3.4.0</version>
				</plugin>
			</plugins>
		</pluginManagement>

	</build>

	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.7.0</version>
						<executions>
							<execution>
								<id>attach-javadoc</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.3.1</version>
						<executions>
							<execution>
								<id>attach-source</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.jreleaser</groupId>
						<artifactId>jreleaser-maven-plugin</artifactId>
						<version>1.13.1</version>
						<configuration>
							<jreleaser>
								<signing>
									<active>ALWAYS</active>
									<armored>true</armored>
								</signing>
								<deploy>
									<maven>
										<nexus2>
											<maven-central>
												<active>ALWAYS</active>
												<url>https://s01.oss.sonatype.org/service/local</url>;
												<closeRepository>false</closeRepository>
												<releaseRepository>false</releaseRepository>
												<stagingRepositories>target/staging-deploy</stagingRepositories>
											</maven-central>
										</nexus2>
									</maven>
								</deploy>
							</jreleaser>
						</configuration>
					</plugin>

				</plugins>
			</build>
		</profile>
	</profiles>

	<dependencyManagement>
		<dependencies>

			<dependency>
				<groupId>org.antlr</groupId>
				<artifactId>antlr4-runtime</artifactId>
				<version>${antlr.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${commons-lang3.version}</version>
			</dependency>

			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>

			<dependency>
				<groupId>com.fasterxml.jackson</groupId>
				<artifactId>jackson-bom</artifactId>
				<version>${jackson-bom.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>

		</dependencies>
	</dependencyManagement>

</project>
